# Fantacalcio-AI

./: .dockerignore  .env.docker  .env.example  .gitignore  .replit  =0.24.0  APIFY_SETUP.md  CHAT_RAG_FIX_SUMMARY.md  COST_OPTIMIZATION_SUMMARY.md  DATABASE_MIGRATION.md  DOCKER_SETUP.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FIXES_OGGI_25_SETTEMBRE_2025.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_ITALIANO_DARKMODE.md  INTEGRATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  PHASE1_SUMMARY.md  PHASE2A_COMPLETE.md  PHASE2B_COMPLETE.md  PHASE2C_IMPLEMENTATION_PLAN.md  PHASE2_ANALYSIS.md  PHASE2_IMPLEMENTATION_PLAN.md  PWA_SETUP.md  QUICK_REFERENCE.md  README_QUICKSTART.md  RECENT_CHANGES_REPORT.md  START_HERE.md  TESTING_GUIDE.md  add_players_properly.py  admin.py  age_index_cleaner.py  ai_team_builder.py  analytics_engine.py  apify_config.json  apify_debug_sample.json  apify_debug_transfers.json  apify_position_backfill.py  apify_squad_scraper.py  (+142 more)
attached_assets/: Final_SerieA_Rosters_1758228362370.json  Final_SerieA_Rosters_With_Age_1758230587268.json  Pasted--DOCTYPE-html-html-lang-it-head-meta-charset-UTF-8-meta-name-viewport-content--1755871662031_1755871662032.txt  Pasted--SQL-SELECT-users-id-AS-users-id-users-username-AS-users-1758653756356_1758653756357.txt  Pasted-0-name-Gabriele-Zappa-role-D-team-Cagliari-birth-year--1756762550766_1756762550767.txt  Pasted-2025-08-28-21-59-07-678-debug-apify-INFO-Testing-con-Juventus-2025-08-28-21-59-07-678-api-1756418484095_1756418484096.txt  Regolamento LEGA FANTATSS_202508210948339773_1755783342170.docx  fantacalcioai_1758371146702.css  (+7 more)
(+137 files in other folders)
