[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
openai = "^1.3"
flask = "^3.1.1"
chromadb = "^1.0.15"
sentence-transformers = "^5.0.0"
httpx = "0.27.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
waitress = "^3.0.2"
huggingface-hub = "^0.34.4"
numpy = "^2.3.2"
trafilatura = "^2.0.0"
pyjwt = "^2.10.1"
flask-dance = "^7.1.0"
flask-login = "^0.6.3"
oauthlib = "^3.3.1"
werkzeug = "^3.1.3"
flask-sqlalchemy = "^3.1.1"
stripe = "^12.5.1"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"